--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Wn3A Indie Games</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="content">
