--- a/rolling_surface/privacy_policy.html
+++ b/rolling_surface/privacy_policy.html
@@ -5,6 +5,7 @@
     <title>Rolling Surface - Privacy Policy</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="content">
